# continuum

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
examples/clients/: README.md  run-continuum-stdio.sh
examples/clients/antigravity/: agent-instructions.md.example  mcp_config.json.example
examples/clients/claude-code/: AGENTS.md.example
examples/clients/codex/: AGENTS.md.example  config.toml.example
examples/clients/cursor/: AGENTS.md.example
examples/clients/instructions/: common-memory-rules.md
examples/clients/junie/: agent-instructions.md.example
migrations/: 001_initial.sql  002_agent_agnostic_memory.sql
src/continuum/: __init__.py  cache.py  database.py  models.py  server.py
src/continuum/tools/: __init__.py  forget.py  get.py  list.py  promote.py  save.py  search.py  session_clear.py  session_get.py  session_set.py
tests/: conftest.py  helpers.py  test_integration_end_to_end.py  test_read_and_delete_tools.py  test_save.py  test_save_and_promote.py  test_session_tools.py
